--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.TrackerInv" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Base.Theme.TrackerInv" parent="Theme.Material3.Light.NoActionBar">
+        <item name="android:statusBarColor">#000000</item>
+
+        <!-- Set text/icons in the status bar to light for better contrast on black -->
+        <item name="android:windowLightStatusBar">false</item>
     </style>
 
     <style name="Theme.TrackerInv" parent="Base.Theme.TrackerInv" />
