- Added SaleViewModel.kt and PurchaseViewModel.kt - Removed InventoryViewModel.kt - Created fragments( AddSaleFragment.kt and AddPurchaseFragment.kt ) - Added UseCase for AddSale and AddPurchase

--- a/app/src/main/res/layout/card_purchase_item.xml
+++ b/app/src/main/res/layout/card_purchase_item.xml
@@ -5,18 +5,13 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ID"
-        android:textStyle="bold"
-        android:textSize="16sp" />
-
-    <TextView
         android:id="@+id/invoiceNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Invoice Number" />
+        android:text="Invoice Number"
+        android:textStyle="bold"
+        android:textSize="16sp" />
+
 
     <TextView
         android:id="@+id/invoiceDate"
