--- a/app/src/main/res/layout/fragment_purchase.xml
+++ b/app/src/main/res/layout/fragment_purchase.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.screens.purchase.PurchaseFragment">
+    tools:context=".ui.screen.purchase.PurchaseFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.recyclerview.widget.RecyclerView
@@ -12,6 +12,14 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="16dp" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/addPurchaseButton"
+        android:scaleType="fitCenter"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="24dp"
+        android:src="@android:drawable/ic_input_add" />
 
 
 </FrameLayout>
