--- a/app/src/main/res/layout/card_purchase_item.xml
+++ b/app/src/main/res/layout/card_purchase_item.xml
@@ -1,39 +1,61 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:orientation="horizontal"
+    android:background="#CECCCC"
+    android:elevation="25dp"
+    android:weightSum="3"
+    android:layout_margin="16dp">
 
-    <TextView
-        android:id="@+id/invoiceNumber"
-        android:layout_width="wrap_content"
+    <ImageView
+        android:id="@+id/productImage"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:layout_weight="2"
+        android:scaleType="centerCrop"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:text="Invoice Number"
-        android:textStyle="bold"
-        android:textSize="16sp" />
+        android:padding="16dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/invoiceNumber"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Invoice Number"
+            android:textStyle="bold"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/invoiceDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Invoice Date" />
+
+        <TextView
+            android:id="@+id/supplierName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Supplier Name" />
+
+        <TextView
+            android:id="@+id/quantity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Quantity" />
+
+        <TextView
+            android:id="@+id/pricePerUnit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Price Per Unit" />
 
 
-    <TextView
-        android:id="@+id/invoiceDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Invoice Date" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/supplierName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Supplier Name" />
 
-    <TextView
-        android:id="@+id/quantity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Quantity" />
-
-    <TextView
-        android:id="@+id/pricePerUnit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Price Per Unit" />
 </LinearLayout>
