--- a/app/src/main/res/layout/fragment_inventory_health.xml
+++ b/app/src/main/res/layout/fragment_inventory_health.xml
@@ -3,13 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.screen.report.ReportFragment">
+    tools:context=".ui.screen.report.invhealth.InventoryHealthFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>
+        android:text="@string/hello_blank_fragment" />
+
 </FrameLayout>
